// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepSequenceItem /> completed render 1`] = `
<li
  aria-label="Step 1 of 5"
  className="carbon-step-sequence-item carbon-step-sequence-item--complete"
>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      <Icon
        bgSize="small"
        type="tick"
      />
    </span>
    bar
  </div>
</li>
`;

exports[`<StepSequenceItem /> current render 1`] = `
<li
  aria-current="step"
  aria-label="Step 1 of 5"
  className="carbon-step-sequence-item carbon-step-sequence-item--current"
>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      2
    </span>
    bar
  </div>
</li>
`;

exports[`<StepSequenceItem /> incomplete render 1`] = `
<li
  aria-label="Step 1 of 5"
  className="carbon-step-sequence-item carbon-step-sequence-item--incomplete"
>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      2
    </span>
    bar
  </div>
</li>
`;

exports[`<StepSequenceItem /> without ariaLabel field 1`] = `
<li
  className="carbon-step-sequence-item carbon-step-sequence-item--incomplete"
>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      2
    </span>
    bar
  </div>
</li>
`;
